# SEO-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: blog-api.md  blog_cache.json  categories.json
src/seo_agent/: __init__.py  __main__.py  cli.py  config.py
src/seo_agent/clients/: base.py  dataforseo_client.py  openai_client.py
src/seo_agent/core/: __init__.py  category_manager.py  content_planner.py  workflow.py  workflow_logger.py
src/seo_agent/models/: __init__.py  article.py  blog_post.py  category.py  image.py  keyword.py
src/seo_agent/output/: __init__.py  json_writer.py  markdown_writer.py
src/seo_agent/services/: __init__.py  blog_api_client.py  blog_publisher.py  content_generator.py  cross_linker.py  image_generator.py  keyword_research.py  location_cache.py  scraper.py
src/seo_agent/utils/: logging.py  text_utils.py
tests/: __init__.py  test_blog_publisher.py  test_category_manager.py  test_dataforseo_client.py  test_models.py  test_utils.py
