[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-agent"
version = "0.1.0"
description = "SEO article generation automation CLI tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "rapidfuzz>=3.6.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
seo-agent = "seo_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/seo_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
